// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text align 1`] = `
Array [
  <Text
    style={
      Array [
        undefined,
        undefined,
        Object {
          "color": "#071422",
          "lineHeight": undefined,
          "overflow": "visible",
          "textAlign": "left",
        },
        undefined,
      ]
    }
  >
    Hey, lil 🐛
  </Text>,
  <Text
    style={
      Array [
        undefined,
        undefined,
        Object {
          "color": "#071422",
          "lineHeight": undefined,
          "overflow": "visible",
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Hey, lil 🐛
  </Text>,
  <Text
    style={
      Array [
        undefined,
        undefined,
        Object {
          "color": "#071422",
          "lineHeight": undefined,
          "overflow": "visible",
          "textAlign": "right",
        },
        undefined,
      ]
    }
  >
    Hey, lil 🐛
  </Text>,
]
`;

exports[`Text color 1`] = `
Array [
  <Text
    style={
      Array [
        undefined,
        undefined,
        Object {
          "color": "#071422",
          "lineHeight": undefined,
          "overflow": "visible",
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    Hey, lil 🐛
  </Text>,
  <Text
    style={
      Array [
        undefined,
        undefined,
        Object {
          "color": "#E5212E",
          "lineHeight": undefined,
          "overflow": "visible",
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    Hey, lil 🐛
  </Text>,
  <Text
    style={
      Array [
        undefined,
        undefined,
        Object {
          "color": "#FF9900",
          "lineHeight": undefined,
          "overflow": "visible",
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    Hey, lil 🐛
  </Text>,
  <Text
    style={
      Array [
        undefined,
        undefined,
        Object {
          "color": "#00A45F",
          "lineHeight": undefined,
          "overflow": "visible",
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    Hey, lil 🐛
  </Text>,
  <Text
    style={
      Array [
        undefined,
        undefined,
        Object {
          "color": "#1652F0",
          "lineHeight": undefined,
          "overflow": "visible",
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    Hey, lil 🐛
  </Text>,
  <Text
    style={
      Array [
        undefined,
        undefined,
        Object {
          "color": "#587088",
          "lineHeight": undefined,
          "overflow": "visible",
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    Hey, lil 🐛
  </Text>,
]
`;

exports[`Text default 1`] = `
<Text
  style={
    Array [
      undefined,
      undefined,
      Object {
        "color": "#071422",
        "lineHeight": undefined,
        "overflow": "visible",
        "textAlign": undefined,
      },
      undefined,
    ]
  }
>
  Hey, lil 🐛
</Text>
`;

exports[`Text ellipsize 1`] = `
Array [
  <Text
    ellipsizeMode="clip"
    numberOfLines={1}
    style={
      Array [
        undefined,
        undefined,
        Object {
          "color": "#071422",
          "lineHeight": undefined,
          "overflow": "hidden",
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    Hey, lil 🐛
  </Text>,
  <Text
    ellipsizeMode="head"
    numberOfLines={1}
    style={
      Array [
        undefined,
        undefined,
        Object {
          "color": "#071422",
          "lineHeight": undefined,
          "overflow": "hidden",
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    Hey, lil 🐛
  </Text>,
  <Text
    ellipsizeMode="middle"
    numberOfLines={1}
    style={
      Array [
        undefined,
        undefined,
        Object {
          "color": "#071422",
          "lineHeight": undefined,
          "overflow": "hidden",
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    Hey, lil 🐛
  </Text>,
  <Text
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        undefined,
        undefined,
        Object {
          "color": "#071422",
          "lineHeight": undefined,
          "overflow": "hidden",
          "textAlign": undefined,
        },
        undefined,
      ]
    }
  >
    Hey, lil 🐛
  </Text>,
]
`;

exports[`Text lineheight 1`] = `
<Text
  style={
    Array [
      undefined,
      undefined,
      Object {
        "color": "#071422",
        "lineHeight": 1,
        "overflow": "visible",
        "textAlign": undefined,
      },
      undefined,
    ]
  }
>
  Hey, lil 🐛
</Text>
`;

exports[`Text spacing 1`] = `
<Text
  style={
    Array [
      undefined,
      Object {
        "paddingHorizontal": 12,
        "paddingTop": 8,
      },
      Object {
        "color": "#071422",
        "lineHeight": undefined,
        "overflow": "visible",
        "textAlign": undefined,
      },
      undefined,
    ]
  }
>
  Hey, lil 🐛
</Text>
`;
